Some nice refactoring

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="description" content="m.i.n.a.r. official site.">
   <meta name="author" content="m.i.n.a.r." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="css/style.css">
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
@@ -204,8 +203,8 @@
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-<script src="particles.js"></script>
-<script src="js/app.js"></script>
+<script src="assets/js/particles.js"></script>
+<script src="assets/js/app.js"></script>
 <script>
   date = new Date();
   year = date.getFullYear();
