--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
               <strong>>1.000</strong> Animations and icons created
             </li>
           </ul>
-          <footer class="major">
+          <!--<footer class="major">
             <ul class="actions special">
               <li><a href="generic.html" class="button primary">Get Started</a></li>
               <li><a href="generic.html" class="button">Learn More</a></li>
             </ul>
-          </footer>
+          </footer>-->
         </section> 
 
     </div>
@@ -202,7 +202,7 @@
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="assets/js/main.js"></script>o
 <script src="assets/js/particles.js"></script>
 <script src="assets/js/app.js"></script>
 <script>
