--- a/index.html
+++ b/index.html
@@ -130,11 +130,6 @@
                 <p></p><i class="icon fas fa-dot-circle"></i> I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</p>
                 <p></p><i class="icon fas fa-dot-circle"></i> My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</p>
             </ul>
-          <footer class="major">
-            <ul class="actions special">
-              <li><a href="generic.html" class="button">Learn More</a></li>
-            </ul>
-          </footer>
         </section> 
 
       <!-- Get Started -->
@@ -202,7 +197,7 @@
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>o
+<script src="assets/js/main.js"></script>
 <script src="assets/js/particles.js"></script>
 <script src="assets/js/app.js"></script>
 <script>
