Lists improved, quick fixes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <span class="logo"><img src="images/logo.svg" alt="" /></span>
       <p>Developer, 3d printing passionate and designer</p>
       <ul class="icons">
-        <li><a href="https://github.com/m-i-n-a-r" class="fab fa-github fa-2x"></a></li>
-        <li><a href="https://www.linkedin.com/in/gianluca-conti-723926147/" class="fab fa-linkedin fa-2x"></a></li>
-        <li><a href="https://play.google.com/store/apps/dev?id=7720251761301594831" class="fab fa-google-play fa-2x"></a></li>
-        <li><a href="https://www.youtube.com/channel/UChVxFCDNULWEiDqfrjuZ3Tw" class="fab fa-youtube fa-2x"></a></li>
+        <li><a href="https://github.com/m-i-n-a-r" target="_blank" class="fab fa-github fa-2x"></a></li>
+        <li><a href="https://www.linkedin.com/in/gianluca-conti-723926147/" target="_blank" class="fab fa-linkedin fa-2x"></a></li>
+        <li><a href="https://play.google.com/store/apps/dev?id=7720251761301594831" target="_blank" class="fab fa-google-play fa-2x"></a></li>
+        <li><a href="https://www.youtube.com/channel/UChVxFCDNULWEiDqfrjuZ3Tw" target="_blank" class="fab fa-youtube fa-2x"></a></li>
       </ul>
     </section>
     </header>
@@ -65,49 +65,49 @@
           <ul class="features">
             <li>
               <span class="icon major style2 fas fa-code"></span>
-              <h2><b>Languages and frameworks</b></h3>
-              <ul>
-                <p></p><i class="icon fas fa-dot-circle"></i> Java</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> C</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Javascript</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Angular</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Typescript</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Python</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Kotlin</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Dart</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Flutter</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> HTML/css</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> SQL</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> LUA</p>
+              <h2><b>Languages and frameworks</b></h2>
+              <ul class="skills">
+                <li><i class="icon fas fa-dot-circle"></i>Java</li>
+                <li><i class="icon fas fa-dot-circle"></i>C</li>
+                <li><i class="icon fas fa-dot-circle"></i>Javascript</li>
+                <li><i class="icon fas fa-dot-circle"></i>Angular</li>
+                <li><i class="icon fas fa-dot-circle"></i>Typescript</li>
+                <li><i class="icon fas fa-dot-circle"></i>Python</li>
+                <li><i class="icon fas fa-dot-circle"></i>Kotlin</li>
+                <li><i class="icon fas fa-dot-circle"></i>Dart</li>
+                <li><i class="icon fas fa-dot-circle"></i>Flutter</li>
+                <li><i class="icon fas fa-dot-circle"></i>HTML/css</li>
+                <li><i class="icon fas fa-dot-circle"></i>SQL</li>
+                <li><i class="icon fas fa-dot-circle"></i>LUA</li>
               </ul>
             </li>
             <li>
               <span class="icon major style2 fas fa-laptop"></span>
-              <h2><b>Softwares and platforms</b></h3>
-              <ul>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Android Studio</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Visual Studio</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Eclipse</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Office suite</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Adobe Photoshop</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Adobe Illustrator</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Sony Vegas</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Linux OSes and bash</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Windows and PowerShell</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> PostgreSQL</p>
+              <h2><b>Softwares and platforms</b></h2>
+              <ul class="skills">
+                  <li><i class="icon fas fa-dot-circle"></i>Android Studio</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Visual Studio</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Eclipse</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Office suite</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Adobe Photoshop</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Adobe Illustrator</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Sony Vegas</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Linux OSes and bash</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Windows and PowerShell</li>
+                  <li><i class="icon fas fa-dot-circle"></i>PostgreSQL</li>
               </ul>
             </li>
             <li>
               <span class="icon major style2 fas fa-suitcase"></span>
-              <h2><b>Hardware and miscellanous</b></h3>
-              <ul>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Delta 3D printers</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Pc repair</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Kernel and rom compilation</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Advanced Android using</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> 3D modeling and processing (S3D)</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> System administration</p>
-                  <p></p><i class="icon fas fa-dot-circle"></i> Social media management</p>
+              <h2><b>Hardware and miscellanous</b></h2>
+              <ul class="skills">
+                  <li><i class="icon fas fa-dot-circle"></i>Delta 3D printers</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Pc repair</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Kernel and rom compilation</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Advanced Android using</li>
+                  <li><i class="icon fas fa-dot-circle"></i>3D modeling and processing</li>
+                  <li><i class="icon fas fa-dot-circle"></i>System administration</li>
+                  <li><i class="icon fas fa-dot-circle"></i>Social media management</li>
               </ul>
             </li>
           </ul>
@@ -121,34 +121,34 @@
               Here's a list of the best, in my opinion!</p>
           </header>
           <h2><b>Fun facts</b></h3>
-            <ul>
-                <p></p><i class="icon fas fa-dot-circle"></i> I like to dress elegantly every time is possible.</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> I'm part of different groups of developers, especially on Telegram. Here i found some real friend.</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> I can recognize almost any car model i see.</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite brands is Fallout.</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> I collect a lot of things, from coins to stamps to caps.</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</p>
-                <p></p><i class="icon fas fa-dot-circle"></i> My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</p>
+            <ul class="facts">
+                <li><i class="icon fas fa-dot-circle"></i>I like to dress elegantly every time is possible.</li>
+                <li><i class="icon fas fa-dot-circle"></i>I'm part of different groups of developers, especially on Telegram. Here i found some real friend.</li>
+                <li><i class="icon fas fa-dot-circle"></i>I can recognize almost any car model i see.</li>
+                <li><i class="icon fas fa-dot-circle"></i>Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite brands is Fallout.</li>
+                <li><i class="icon fas fa-dot-circle"></i>I collect a lot of things, from coins to stamps to caps.</li>
+                <li><i class="icon fas fa-dot-circle"></i>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
+                <li><i class="icon fas fa-dot-circle"></i>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
             </ul>
         </section> 
 
       <!-- Get Started -->
         <section id="infos" class="main special">
           <header class="major">
-            <h2>Some number, and my goal</h2>
-            <p></p>
+            <h2>Some numbers, and my goal</h2>
+            <p>All i want is to use my natural attitudes to improve a little piece of world.</p>
           </header>
           <ul class="statistics">
             <li class="style1">
-              <span class="icon fa-code-fork"></span>
-              <strong>70.000</strong> Play Store free downloads
+              <span class="icon fas fa-download"></span>
+              <strong>80.000</strong> Play Store free downloads
             </li>
             <li class="style2">
               <span class="icon fas fa-money"></span>
-              <strong>20.000</strong> Play Store paid downloads
+              <strong>25.000</strong> Play Store paid downloads
             </li>
             <li class="style3">
-              <span class="icon fa-signal"></span>
+              <span class="icon fas fa-calendar-check"></span>
               <strong id="experience"></strong> Years of experience
             </li>
             <li class="style4">
@@ -157,7 +157,7 @@
             </li>
             <li class="style5">
               <span class="icon fa-diamond"></span>
-              <strong>>1.000</strong> Animations and icons created
+              <strong>+1.000</strong> Animations and icons created
             </li>
           </ul>
           <!--<footer class="major">
@@ -206,11 +206,11 @@
   if (date.getMonth() < 3 && date.getDate() < 24) year = year - 1;
   age = year - 1995; 
   me = "I'm a " + age + " years old guy, with a lot of interests and hobbies, and a great " +
-  "propension to create. I worked on software for different platforms and operating systems, " + 
+  "propension to <b>create</b>. I worked on software for different platforms and operating systems, " + 
   "graphic design, 3d printing and modeling, videomaking" +
-  ", photografy, music and more. I also like videogames, cars, sports and philosophy. The patience " +
+  ", photografy, music and more. I also like videogames, cars, sports and philosophy. The <b>patience</b> " +
   "is probably my best quality, and i know how to find the informations to solve the problems i face" + 
-  " during my work, usually! Just to mention, i'm also a computer engineer, and i can work both alone or in a team."; 
+  " during my work, usually! Just to mention, i'm also a <b>computer engineer</b>, and i can work both alone or in a team."; 
   document.getElementById('me').innerHTML = me;
 </script>
 <script>
