Reworked skills. Huge cleanup needed.

--- a/index.html
+++ b/index.html
@@ -60,54 +60,51 @@
       <!-- Skills -->
         <section id="skills" class="main special">
           <header class="major">
-            <h2>My skills</h2>
+            <h2>My personal skills</h2>
           </header>
-          <ul class="features">
+          <ul>
             <li>
-              <span class="icon major style2 fas fa-code"></span>
-              <h2><b>Languages and frameworks</b></h2>
-              <ul class="skills">
-                <li><i class="icon fas fa-dot-circle"></i>Java</li>
-                <li><i class="icon fas fa-dot-circle"></i>C</li>
-                <li><i class="icon fas fa-dot-circle"></i>Javascript</li>
-                <li><i class="icon fas fa-dot-circle"></i>Angular</li>
-                <li><i class="icon fas fa-dot-circle"></i>Typescript</li>
-                <li><i class="icon fas fa-dot-circle"></i>Python</li>
-                <li><i class="icon fas fa-dot-circle"></i>Kotlin</li>
-                <li><i class="icon fas fa-dot-circle"></i>Dart</li>
-                <li><i class="icon fas fa-dot-circle"></i>Flutter</li>
-                <li><i class="icon fas fa-dot-circle"></i>HTML/css</li>
-                <li><i class="icon fas fa-dot-circle"></i>SQL</li>
-                <li><i class="icon fas fa-dot-circle"></i>LUA</li>
+              <h2><i class="fas fa-code"></i><b>Languages and frameworks</b></h2>
+              <ul class="features outline">
+                <li>Java</li>
+                <li>C</li>
+                <li>Javascript</li>
+                <li>Angular</li>
+                <li>Typescript</li>
+                <li>Python</li>
+                <li>Kotlin</li>
+                <li>Dart</li>
+                <li>Flutter</li>
+                <li>HTML/css</li>
+                <li>SQL</li>
+                <li>LUA</li>
               </ul>
             </li>
-            <li>
-              <span class="icon major style2 fas fa-laptop"></span>
-              <h2><b>Softwares and platforms</b></h2>
-              <ul class="skills">
-                  <li><i class="icon fas fa-dot-circle"></i>Android Studio</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Visual Studio</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Eclipse</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Office suite</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Adobe Photoshop</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Adobe Illustrator</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Sony Vegas</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Linux OSes and bash</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Windows and PowerShell</li>
-                  <li><i class="icon fas fa-dot-circle"></i>PostgreSQL</li>
+            <li>          
+              <h2><i class="fas fa-laptop"></i><b>Softwares and platforms</b></h2>
+              <ul class="features outline">
+                <li>Android Studio</li>
+                <li>Visual Studio</li>
+                <li>Eclipse</li>
+                <li>Office suite</li>
+                <li>Adobe Photoshop</li>
+                <li>Adobe Illustrator</li>
+                <li>Sony Vegas</li>
+                <li>Linux OSes and bash</li>
+                <li>Windows and PowerShell</li>
+                <li>PostgreSQL</li>
               </ul>
             </li>
-            <li>
-              <span class="icon major style2 fas fa-suitcase"></span>
-              <h2><b>Hardware and miscellanous</b></h2>
-              <ul class="skills">
-                  <li><i class="icon fas fa-dot-circle"></i>Delta 3D printers</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Pc repair</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Kernel and rom compilation</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Advanced Android using</li>
-                  <li><i class="icon fas fa-dot-circle"></i>3D modeling and processing</li>
-                  <li><i class="icon fas fa-dot-circle"></i>System administration</li>
-                  <li><i class="icon fas fa-dot-circle"></i>Social media management</li>
+            <li>         
+              <h2><i class="fas fa-suitcase"></i><b>Hardware and miscellanous</b></h2>
+              <ul class="features outline">
+                <li>Delta 3D printers</li>
+                <li>Pc repair</li>
+                <li>Kernel and rom compilation</li>
+                <li>Advanced Android using</li>
+                <li>3D modeling and processing</li>
+                <li>System administration</li>
+                <li>Social media management</li>
               </ul>
             </li>
           </ul>
@@ -121,15 +118,15 @@
               Here's a list of the best, in my opinion!</p>
           </header>
           <h2><b>Fun facts</b></h3>
-            <ul class="facts">
-                <li><i class="icon fas fa-dot-circle"></i>I like to dress elegantly every time is possible.</li>
-                <li><i class="icon fas fa-dot-circle"></i>I'm part of different groups of developers, especially on Telegram. Here i found some real friend.</li>
-                <li><i class="icon fas fa-dot-circle"></i>I can recognize almost any car model i see.</li>
-                <li><i class="icon fas fa-dot-circle"></i>Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite brands is Fallout.</li>
-                <li><i class="icon fas fa-dot-circle"></i>I collect a lot of things, from coins to stamps to caps.</li>
-                <li><i class="icon fas fa-dot-circle"></i>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
-                <li><i class="icon fas fa-dot-circle"></i>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
-            </ul>
+          <ul class="facts">
+              <li><i class="icon fas fa-dot-circle"></i>I like to dress elegantly every time is possible.</li>
+              <li><i class="icon fas fa-dot-circle"></i>I'm part of different groups of developers, especially on Telegram. Here i found some real friends.</li>
+              <li><i class="icon fas fa-dot-circle"></i>I can recognize almost any car model i see, and i especially like japanese sport cars.</li>
+              <li><i class="icon fas fa-dot-circle"></i>Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite is Fallout.</li>
+              <li><i class="icon fas fa-dot-circle"></i>I collect a lot of things, from coins to stamps to caps.</li>
+              <li><i class="icon fas fa-dot-circle"></i>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
+              <li><i class="icon fas fa-dot-circle"></i>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
+          </ul>
         </section> 
 
       <!-- Get Started -->
