Projects, better skills, fixes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="m.i.n.a.r. official site.">
   <meta name="author" content="m.i.n.a.r." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
@@ -49,7 +50,7 @@
           <div class="spotlight">
             <div class="content">
               <header class="major">
-                <h2>Who are you?</h2>
+                <h2><b>WHO ARE YOU?</b></h2>
               </header>
               <p id="me"></p>
             </div>
@@ -60,7 +61,7 @@
       <!-- Skills -->
         <section id="skills" class="main special">
           <header class="major">
-            <h2>My personal skills</h2>
+            <h2><b>MY PERSONAL SKILLS</b></h2>
           </header>
           <ul>
             <li>
@@ -105,6 +106,7 @@
                 <li>3D modeling and processing</li>
                 <li>System administration</li>
                 <li>Social media management</li>
+                <li>Fluent english speaker</li>
               </ul>
             </li>
           </ul>
@@ -113,10 +115,77 @@
       <!-- Projects -->
         <section id="projects" class="main special">
           <header class="major">
-            <h2>My works</h2>
+            <h2><b>MY WORKS</b></h2>
             <p>I was part of some collaborations, and i worked alone on various different projects.<br />
-              Here's a list of the best, in my opinion!</p>
+              Here's a list of my favorites!</p>
           </header>
+
+          <div class="spotlight">
+            <div class="content">
+              <header class="major">
+                <h3><b>Escape Earth - NASA Hackaton 2018</b></h3>
+              </header>
+              <div>
+                <span class="image-small"><img src="images/escapeearth.png" alt="" /></span> 
+                <p>
+                  This is a project developed during the NASA Space Apps Challenge (20-21 October 2018).
+                  It's a cross platform application developed using the Flutter Framework. What i did was 
+                  working on the initial idea, on the code and on the UI. Furthermore, i made the pitch video
+                  and PowerPoint presentation. Below you can find additional informations!             
+                </p>
+              </div>            
+              <a href="https://github.com/simonesestito/escape_earth" class="button" target="_blank">Learn More</a>
+            </div>
+          </div>
+          <div class="spotlight">
+              <div class="content">
+                <header class="major">
+                  <h3><b>Pip-Boy Watchface</b></h3>
+                </header>
+                <div>
+                  <span class="image-small"><img src="images/pipboy.png" alt="" /></span> 
+                  <p>
+                    This watchface was started back in 2015 as a personal project. It uses LUA and a set of graphic
+                    resources, personally recreated in Photoshop. I gradually improved it, and today it has around 20k
+                    paid downloads. I'm still improving it!          
+                  </p> 
+                </div>           
+                <a href="https://play.google.com/store/apps/details?id=minar.wmwatch.pipboy" class="button" target="_blank">Learn More</a>
+              </div>
+            </div>
+            <div class="spotlight">
+                <div class="content">
+                  <header class="major">
+                    <h3><b>Randomix - Decision Maker</b></h3>
+                  </header>
+                  <div>
+                    <span class="image-small"><img src="images/randomix.png" alt="" /></span> 
+                    <p>
+                      An app coded during my free time. Basically, it's an open source random decisor, and it's available
+                      free. It uses a lot of animated vector drawables, an interesting resource type avilable in Android.
+                      The code is available in Github for improvements and translations.            
+                    </p> 
+                  </div>           
+                  <a href="https://play.google.com/store/apps/details?id=com.minar.randomix" class="button" target="_blank">Learn More</a>
+                </div>
+              </div>
+              <div class="spotlight">
+                  <div class="content">
+                    <header class="major">
+                      <h3><b>Folginar Development Project</b></h3>
+                    </header>
+                    <div>
+                      <span class="image-small"><img src="images/folginar.png" alt="" /></span> 
+                      <p>
+                        A project started with a friend of mine. It's a set of skins for PowerAmp (one of the most used music
+                        players for Android) and they're currently the most famous skins for PowerAmp v3, with around 5k paid 
+                        downloads. Other skins are under development and the download count is going up!            
+                      </p>  
+                    </div>          
+                    <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button" target="_blank">Learn More</a>
+                  </div>
+                </div>
+
           <h2><b>Fun facts</b></h3>
           <ul class="facts">
               <li><i class="icon fas fa-dot-circle"></i>I like to dress elegantly every time is possible.</li>
@@ -132,17 +201,19 @@
       <!-- Get Started -->
         <section id="infos" class="main special">
           <header class="major">
-            <h2>Some numbers, and my goal</h2>
-            <p>All i want is to use my natural attitudes to improve a little piece of world.</p>
+            <h2><b>SOME NUMBER, AND MY GOAL</b></h2>
+            <p>All i want is to use my natural attitudes to improve a little piece of world. 
+            Work and ambitions are important, but only if you can share your progresses with 
+            someone you love.</p>
           </header>
           <ul class="statistics">
             <li class="style1">
               <span class="icon fas fa-download"></span>
-              <strong>80.000</strong> Play Store free downloads
+              <strong>100.000</strong> Play Store downloads
             </li>
             <li class="style2">
               <span class="icon fas fa-money"></span>
-              <strong>25.000</strong> Play Store paid downloads
+              <strong>30.000</strong> Play Store paid downloads
             </li>
             <li class="style3">
               <span class="icon fas fa-calendar-check"></span>
@@ -157,12 +228,6 @@
               <strong>+1.000</strong> Animations and icons created
             </li>
           </ul>
-          <!--<footer class="major">
-            <ul class="actions special">
-              <li><a href="generic.html" class="button primary">Get Started</a></li>
-              <li><a href="generic.html" class="button">Learn More</a></li>
-            </ul>
-          </footer>-->
         </section> 
 
     </div>
@@ -205,7 +270,7 @@
   me = "I'm a " + age + " years old guy, with a lot of interests and hobbies, and a great " +
   "propension to <b>create</b>. I worked on software for different platforms and operating systems, " + 
   "graphic design, 3d printing and modeling, videomaking" +
-  ", photografy, music and more. I also like videogames, cars, sports and philosophy. The <b>patience</b> " +
+  ", photography, music and more. I also like videogames, cars, sports and philosophy. The <b>patience</b> " +
   "is probably my best quality, and i know how to find the informations to solve the problems i face" + 
   " during my work, usually! Just to mention, i'm also a <b>computer engineer</b>, and i can work both alone or in a team."; 
   document.getElementById('me').innerHTML = me;
