Still a lot to refine and clean

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   This is a project developed during the NASA Space Apps Challenge (20-21 October 2018).
                   It's a cross platform application developed using the Flutter Framework. What i did was 
                   working on the initial idea, on the code and on the UI. Furthermore, i made the pitch video
-                  and PowerPoint presentation. Below you can find additional informations!             
+                  and PowerPoint presentation.            
                 </p>
               </div>            
               <a href="https://github.com/simonesestito/escape_earth" class="button" target="_blank">Learn More</a>
@@ -163,7 +163,7 @@
                     <p>
                       An app coded during my free time. Basically, it's an open source random decisor, and it's available
                       free. It uses a lot of animated vector drawables, an interesting resource type avilable in Android.
-                      The code is available in Github for improvements and translations.            
+                      The code is available on Github for improvements and translations.            
                     </p> 
                   </div>           
                   <a href="https://play.google.com/store/apps/details?id=com.minar.randomix" class="button" target="_blank">Learn More</a>
@@ -186,19 +186,34 @@
                   </div>
                 </div>
 
-          <h2><b>Fun facts</b></h3>
+                <div class="spotlight">
+                    <div class="content-short">
+                      <header class="major">
+                        <h3><b>This Portfolio Site!</b></h3>
+                      </header>
+                        <p class="short">
+                         This site itself is one of my projects! I decided to Upload the souce on Github, to be used as
+                         a base for other developers. You can find it <a href="https://github.com/m-i-n-a-r/sparky-portfolio">here</a>!          
+                        </p>  
+                    </div>
+                  </div>
+        </section>
+
+      <!-- Fun facts (not an actual section) -->  
+        <section id="funfacts" class="main special">
+          <header class="major"><h3><b>Fun facts</b></h3></header>
           <ul class="facts">
-              <li><i class="icon fas fa-dot-circle"></i>I like to dress elegantly every time is possible.</li>
-              <li><i class="icon fas fa-dot-circle"></i>I'm part of different groups of developers, especially on Telegram. Here i found some real friends.</li>
-              <li><i class="icon fas fa-dot-circle"></i>I can recognize almost any car model i see, and i especially like japanese sport cars.</li>
-              <li><i class="icon fas fa-dot-circle"></i>Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite is Fallout.</li>
-              <li><i class="icon fas fa-dot-circle"></i>I collect a lot of things, from coins to stamps to caps.</li>
-              <li><i class="icon fas fa-dot-circle"></i>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
-              <li><i class="icon fas fa-dot-circle"></i>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
+              <li>I like to dress elegantly every time is possible.</li>
+              <li>I'm part of different groups of developers, especially on Telegram. Here i found some real friends.</li>
+              <li>I can recognize almost any car model i see, and i especially like japanese sport cars.</li>
+              <li>Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite is Fallout.</li>
+              <li>I collect a lot of things, from coins to stamps to caps.</li>
+              <li>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
+              <li>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
           </ul>
         </section> 
 
-      <!-- Get Started -->
+      <!-- More infos -->
         <section id="infos" class="main special">
           <header class="major">
             <h2><b>SOME NUMBER, AND MY GOAL</b></h2>
