New font, improvements

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 and PowerPoint presentation.
               </p>
             </div>
-            <a href="https://github.com/simonesestito/escape_earth" class="button" target="_blank">Learn More</a>
+            <a href="https://github.com/simonesestito/escape_earth" class="button small" target="_blank">Learn More</a>
           </div>
         </div>
         <div class="spotlight">
@@ -155,7 +155,7 @@
                 paid downloads. I'm still improving it!
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/details?id=minar.wmwatch.pipboy" class="button" target="_blank">Learn
+            <a href="https://play.google.com/store/apps/details?id=minar.wmwatch.pipboy" class="button small" target="_blank">Learn
               More</a>
           </div>
         </div>
@@ -172,7 +172,7 @@
                 The code is available on Github for improvements and translations.
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/details?id=com.minar.randomix" class="button" target="_blank">Learn
+            <a href="https://play.google.com/store/apps/details?id=com.minar.randomix" class="button small" target="_blank">Learn
               More</a>
           </div>
         </div>
@@ -189,16 +189,14 @@
                 downloads. Other skins are under development and the download count is going up!
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button" target="_blank">Learn
+            <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button small" target="_blank">Learn
               More</a>
           </div>
         </div>
 
         <div class="spotlight">
           <div class="content-short">
-            <header class="major">
-              <h3><b>This Portfolio Site!</b></h3>
-            </header>
+            <h3><b>This Portfolio Site!</b></h3>
             <p class="short">
               This site itself is one of my projects! I decided to Upload the souce on Github, to be used as
               a base for other developers. You can find it <a href="https://github.com/m-i-n-a-r/sparky-portfolio">here</a>!
@@ -211,7 +209,7 @@
       <!-- Fun facts (not an actual section) -->
       <section id="funfacts" class="main special">
         <header class="major">
-          <h3><b>Fun facts</b></h3>
+          <h3><b>Fun facts!</b></h3>
         </header>
         <ul class="facts">
           <li>I like to dress elegantly every time is possible.</li>
